Fix contact stop list  * Add description for stopped and blocked lists

--- a/templates/contacts/contact_archived.haml
+++ b/templates/contacts/contact_archived.haml
@@ -1,8 +1,6 @@
 -extends "contacts/contact_list.haml"
 -load i18n
 
--block title-text
-  .title.leading-tight
-    -trans "Archived Contacts"
+-block subtitle
   .text-base.mt-1
     -trans "These contacts have been removed from all groups and can be deleted permanently."
