--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -230,6 +230,9 @@
     -block footer
       .footer.text-center.py-12.bg-gray-200.text-gray-500
         {{ request.branding.credits|safe }}
+        %a.ml-8(href="/policy/")
+            Privacy Policy
+
 
   -trans 'Delete' as title
   %temba-dialog#general-delete-confirmation.hidden{header:"{{title|escapejs}}", primaryButtonName:"{{title|escapejs}}", destructive: "true"}
