--- a/templates/smartmin/list.haml
+++ b/templates/smartmin/list.haml
@@ -10,7 +10,7 @@
 -block content
   -block table-controls
     .row
-      .span12.table-buttons
+      .table-buttons
         - block table-buttons
           - if view.add_button
             %a.btn.btn-primary.pull-right{ href:"./create/" } Add
