--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -230,8 +230,9 @@
     -block footer
       .footer.text-center.py-12.bg-gray-200.text-gray-500
         {{ request.branding.credits|safe }}
-        %a.ml-8(href="/policy/")
-            Privacy Policy
+        %div
+          %a.p-1.text-gray-500.underline(href="/policy/")
+            Privacy
 
 
   -trans 'Delete' as title
