--- a/templates/orgs/org_translations.haml
+++ b/templates/orgs/org_translations.haml
@@ -4,6 +4,6 @@
 -block summary
   -if translator_service
     -blocktrans trimmed with tr_service=translator_service
-      Connected to <b>{{ tr_service }}</b> service.
+      Connected to <b>{{ tr_service }}</b>.
   -else
-    -trans "Connect a translation service."
+    -trans "Connect your live translation system."
