Make Privacy link localized

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -232,7 +232,7 @@
         {{ request.branding.credits|safe }}
         %div
           %a.p-1.text-gray-500.underline(href="/policy/")
-            Privacy
+            -trans "Privacy"
 
 
   -trans 'Delete' as title
