Added initial data for the translations endpoint.

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -407,7 +407,7 @@
         giftcard: '/flow/giftcards_api/',
         link: '/link/api/',
         {% if has_translator %}
-          translation: '/org/translate',
+          translation: '/org/translate/',
         {% endif %}
       },
 
