--- a/templates/notifications/email/export_finished.message.html
+++ b/templates/notifications/email/export_finished.message.html
@@ -1,7 +1,11 @@
+{% extends "notifications/email/base.html" %}
 {% load i18n %}
 
-<p>{% trans "Hi there!" %}</p>
-<p>{% trans "Your message export is ready" %}:</p>
-<p>{% blocktrans with url=branding.link|add:target_url %}Download the Excel file here: {{ url }}{% endblocktrans %}</p>
-<p>{% trans "Thanks" %}</p>
-<p>{% blocktrans with brand=branding.name %}The {{ brand }} Team {% endblocktrans %}</p>
+{% block notification-body %}
+<p>
+    {% trans "Your message export is ready." %}
+</p>
+<p>
+    {% blocktrans with url=branding.link|add:target_url %}Download the Excel file here: {{ url }}{% endblocktrans %}
+</p>
+{% endblock notification-body %}
