--- a/templates/notifications/email/export_finished.results.html
+++ b/templates/notifications/email/export_finished.results.html
@@ -1,12 +1,16 @@
+{% extends "notifications/email/base.html" %}
 {% load i18n %}
 
-<p>{% trans "Hi there!" %}</p>
-<p>{% trans "Your export of results for the following flows is ready." %}</p>
+{% block notification-body %}
+<p>
+    {% trans "Your export of results for the following flows is ready." %}
+</p>
 <ul>
 {% for flow in flows %}
     <li>{{ flow.name }}</li>
 {% endfor %}
 </ul>
-<p>{% blocktrans with url=branding.link|add:target_url %}Download the Excel file here: {{ url }}{% endblocktrans %}</p>
-<p>{% trans "Thanks" %}</p>
-<p>{% blocktrans with brand=branding.name %}The {{ brand }} Team{% endblocktrans %}</p>
+<p>
+    {% blocktrans with url=branding.link|add:target_url %}Download the Excel file here: {{ url }}{% endblocktrans %}
+</p>
+{% endblock notification-body %}
