--- a/templates/notifications/email/base.html
+++ b/templates/notifications/email/base.html
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-  {% trans "Thanks!" %}<br/>
+  {% trans "Thanks" %}<br/>
   {% blocktrans trimmed with brand=branding.name %}The {{ brand }} Team{% endblocktrans %}
 </p>
 
