--- a/templates/orgs/email/user_forget.html
+++ b/templates/orgs/email/user_forget.html
@@ -1,32 +1,26 @@
 {% extends "email_base.html" %}
-
-{% load tz %}
 {% load i18n %}
+
 {% block body %}
-
-
-{% blocktrans with account_name=user.username brand_link=branding.link  %}
-
-<br/>
-Hi from {{ hostname }},
-<br/>
-<br/>
-Someone has requested that the password for this email address be reset.
-<br/>
-<br/>
-Clicking on the following link will allow you to reset the password for the account {{account_name}}:
-<br/>
-<a href='{{ brand_link }}{{path}}'>Reset password</a>.
-<br/>
-<br/>
-If you did not request this, don't worry, this email has only been sent to you and your account remains secure.
-<br/>
-Thank you.
-<br/>
-<br/>
-Please do not reply to this email.
-<br/>
-<br/>
-{% endblocktrans %}
+<p>
+    {% trans "Hi there" %}
+</p>
+<p>
+    {% trans "Someone has requested that the password for this email address be reset." %}
+</p>
+<p>
+    {% blocktrans trimmed with email=user.username  %}
+    Clicking on the following link will allow you to reset the password for the account {{ email }}:
+    {% endblocktrans %}
+</p>
+<p align="center">
+    <a href='{{ branding.link }}{{ path }}'>Reset password</a>
+</p>
+<p>
+    {% trans "If you did not request this, don't worry, this email has only been sent to you and your account remains secure." %}
+</p>
+<p>
+    {% trans "Thank you. Please do not reply to this email." %}
+</p>
 
 {% endblock body %}
