Add settings menu.  * Generic URL mappings  * Support for redirects  * Updates for 2FA  * Nicer archives

--- a/templates/channels/channellog_read.haml
+++ b/templates/channels/channellog_read.haml
@@ -17,13 +17,13 @@
         -trans "Recipient"
       -block log-recipient
         -if object.msg
-          %a(href='{% url "contacts.contact_read" object.msg.contact.uuid %}')
+          %temba-anchor(href='{% url "contacts.contact_read" object.msg.contact.uuid %}')
             {{ object.msg.contact_urn.get_display }}
 
     .inline-flex.mr-8
       .font-normal.mr-2
         -trans "Channel"
-      %a(href='{% url "channels.channel_read" object.channel.uuid %}')
+      %temba-anchor(href='{% url "channels.channel_read" object.channel.uuid %}')
         {{ object.channel }}
 
     .inline-flex.mr-8
