--- a/templates/orgs/login/confirm_access_spa.haml
+++ b/templates/orgs/login/confirm_access_spa.haml
@@ -1,10 +1,11 @@
--extends "orgs/login/login_base.haml"
+-extends "orgs/login/login_base_spa.haml"
 -load smartmin i18n
 
 -block login-title
   -trans "Confirm Access"
       
 -block login-content
+
   -blocktrans trimmed
     To access this page please confirm your current password.
 
