--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -1875,6 +1875,7 @@ code {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
   border-radius: 0.5rem;
+  flex-shrink: 0;
   margin-top: 1rem;
   margin-bottom: 1rem;
   overflow: hidden;
@@ -1969,7 +1970,7 @@ code {
       box-shadow: var(--widget-box-shadow-focused);
     }
 
-.formax .formax-section.action-summary {
+.formax .formax-section.action-summary, .formax .formax-section.action-link {
       background-color: transparent;
       --tw-border-opacity: 1;
       border-color: rgba(203, 203, 203, var(--tw-border-opacity));
@@ -1979,13 +1980,13 @@ code {
       background-color: rgba(0,0,0,.015);
     }
 
-.formax .formax-section.action-summary .formax-summary {
+.formax .formax-section.action-summary .formax-summary, .formax .formax-section.action-link .formax-summary {
         padding-top: 1.5rem !important;
         padding-bottom: 1.5rem !important;
         background-color: transparent;
       }
 
-.formax .formax-section.action-summary .formax-icon {
+.formax .formax-section.action-summary .formax-icon, .formax .formax-section.action-link .formax-icon {
         background-color: transparent;
       }
 
