--- a/static/scss/tailwind.scss
+++ b/static/scss/tailwind.scss
@@ -624,7 +624,7 @@ code {
 }
 
 .card {
-  @apply rounded-lg py-6 px-6 shadow my-4 bg-white overflow-hidden transition duration-200;
+  @apply rounded-lg py-6 px-6 shadow my-4 bg-white overflow-hidden transition duration-200 flex-shrink-0;
 
   .bleed-t {
     @apply -mt-6 mb-6;
@@ -693,7 +693,7 @@ code {
       box-shadow: var(--widget-box-shadow-focused);
     }
 
-    &.action-summary {
+    &.action-summary, &.action-link {
       @apply border border-gray-400 shadow-none bg-transparent;
 
       background-color: rgba(0,0,0,.015);
