--- a/templates/archives/archive_list_spa.haml
+++ b/templates/archives/archive_list_spa.haml
@@ -27,8 +27,6 @@
   -if object_list
     %table.archives.list.lined
       %thead
-        %th.name
-          -trans "File"
         %th
           -trans "Records"
         %th
@@ -39,23 +37,22 @@
 
       -for archive in object_list
         %tr.archive-row
-          %td
-            .hover-linked.break-all(onclick="goto(event)" href="{% url 'archives.archive_read' archive.id %}")
-              {{archive.filename}}
           %td.archive-record-count.cell
-            {{archive.record_count|intcomma}}
-          %td.archive-size.cell
-            {{archive.size_display}}
-          %td.archive-period.cell
+            .pl-6
+              {{archive.record_count|intcomma}}
+          %td.archive-size.cell.whitespace-nowrap
+            .pl-32
+              {{archive.size_display}}
+          %td.archive-period.cell.w-full
             -if archive.period == 'D'
               {{archive.start_date|date:"M j, Y"}}
             -else
               {{archive.start_date|date:"F Y"}}
           %td.text-gray-500
             -if archive.period == 'D'
-              .icon-docs-2.hover-linked(onclick="goto(event)" href="{% url 'archives.archive_read' archive.id %}")
+              %temba-button(name="Download" onclick="goto(event)" href="{% url 'archives.archive_read' archive.id %}")
             -else
-              .icon-box.hover-linked(onclick="goto(event)" href="{% url 'archives.archive_read' archive.id %}")
+              %temba-button(name="Download" onclick="goto(event)" href="{% url 'archives.archive_read' archive.id %}")
   -else
 
     -blocktrans trimmed
@@ -95,12 +92,10 @@
 
     .archive-period {
       text-align: right;
-      width: 130px;
     }
 
     .archive-size {
       text-align: right;
-      width: 130px;
     }
 
     .archive-record-count {
