--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -54,7 +54,7 @@
     }
     
     .spa-container {
-      background: #e9e9e9;
+      background: #f7f7f7;
       overflow-y:auto;
       
     }
@@ -284,6 +284,11 @@
           }
         );
 
+        // we may have redirected
+        if (response.url) {
+          window.lastFetch = response.url;
+        }
+
         response.text().then(function (body){
           var containerEle = document.querySelector(container);
           var scriptsEle = document.querySelector(".ajax-scripts");
@@ -435,6 +440,10 @@
     })
 
     document.querySelector(".spa-content").addEventListener("click", function(evt) {
+      if (true) {
+        return;
+      }
+      
       var target = evt.target;
       if (target.href && target.href.indexOf("xlsx") > -1) {
         return;
@@ -476,6 +485,8 @@
             "onSuccess": hideLoading,  
         });
       } else {
+
+        console.log("POSTING", window.lastFetch);
         evt.stopPropagation();
         evt.preventDefault();
         var formData = new FormData(formEle);
@@ -497,21 +508,8 @@
         gotoURL(state.url, state.show);
         var menu = document.querySelector("temba-menu");
         menu.setFocusedItem(state.show);
-
-        // fetchURL(state.url);
-
-        /* fetchAjax(state.url, ".spa-content", { "headers": { 
-          "TEMBA-SPA": "1", 
-          "TEMBA-REFERER-PATH": state.path,
-          "TEMBA-PATH": state.path
-          }, 
-        "onSuccess": hideLoading, "ignoreEvents": false, "cancel": true
-        });*/
-
       }
     });
-
-
 
     function goto(event, ele) {
       if (!ele) {
@@ -579,6 +577,12 @@
       updatePageTitle();
       var menu = document.querySelector("temba-menu");
       menu.refresh();
+
+      document.querySelectorAll(".posterize").forEach(function(ele){
+        ele.addEventListener("click", function(){ 
+          handlePosterize(ele);
+          });
+      });
     }
 
     function handleUpdateComplete() {
@@ -610,73 +614,56 @@
       });
     }
 
-    function convertLegacyURL(dest) {
-      const path = dest.path;
-      if (dest.url.indexOf("/contact/read/") == 0) {
-        dest.path = dest.url.replace("/contact/read/", "/contacts/read/");
-      }
+    var legacyURLs = [
+      { old: /\/msg\/filter\/(.*)/,                        new: /\/messages\/labels\/(.*)\// },
+      { old: /\/contact\/read\/(.*)/,                      new: /\/contacts\/read\/(.*)/ },
+      { old: /\/contact\/filter\/(.*)/,                    new: /\/contacts\/groups\/(.*)\// },
+      { old: /\/flow\/editor\/(.*)\//,                     new: /\/flows\/editor\/(.*)/ },
+      { old: /\/flow\/filter\/(.*)\//,                     new: /\/flows\/(.*)\// },
+      { old: /\/ticket\/(.*)/,                             new: /\/tickets\/(.*)\// },
+      { old: /\/channels\/channellog\/read\/(.*)\/(.*)\//, new: /\/settings\/ch-(.*)\/log\/(.*)/ },
+      { old: /\/channels\/channellog\/(.*)\//,             new: /\/settings\/ch-(.*)\/log/ },
+      { old: /\/channels\/channel\/configuration\/(.*)\//, new: /\/settings\/ch-(.*)\/config/ },
+      { old: /\/channels\/channel\/read\/(.*)/,            new: /\/settings\/ch-(.*)\// },
+      { old: /\/channels\/types\/(.*)\/claim/,             new: /\/settings\/channel\/(.*)\// },
+      { old: /\/org\/manage_accounts\/(.*)/,               new: /\/settings\/logins/ },
+      { old: /\/user\/two_factor_disable\//,               new: /\/settings\/authentication\/2fa-disable\// }
+    ]
 
-      if (dest.url.indexOf("/flow/editor/") == 0) {
-        dest.path = dest.url.replace("/flow/editor/", "/flows/editor/");
-      }
+    var toMap = /(msg|contact|flow|ticket|channels|org|user).*/;
 
-      if (dest.url.indexOf("/contact/filter/") == 0) {
-        dest.path = dest.url.replace("/contact/filter/", "/contacts/groups/");
-      }
-      
-      if (dest.url.indexOf("/msg/filter/") == 0) {
-        dest.path = dest.url.replace("/msg/filter/", "/messages/labels/");
-      }
-
-      if (dest.url.indexOf("/flow/filter/") == 0) {
-        dest.path = dest.url.replace("/flow/filter/", "/flows/labels/");
-      }
-
-      if (dest.url.indexOf("/ticket/") == 0) {
-        dest.path = dest.url.replace("/ticket/", "/tickets/");
-      }
-
-      if (dest.url.indexOf("/channels/channel/read/") == 0) {
-        dest.path = dest.url.replace("/channels/channel/read/", "/settings/channels/");
-      } else {
-
-        if (dest.url.indexOf("/channels/channellog/read") == 0) {
-          var match = dest.url.match(/\/channels\/channellog\/read\/(.*)\/(.*)\//);
-          if (match.length > 2) {
-            dest.path = "/settings/channels/" + match[1] + "/log/" + match[2];
+    function replaceMapping(path, reverse) {
+      var findDirection = reverse ? "new" : "old";
+      var replaceDirection = reverse ? "old" : "new";
+      for (var mapping of legacyURLs) {
+        var match = path.match(mapping[findDirection]);
+        console.log(path, mapping[findDirection], !!match);
+        if (match) {
+          
+          path = mapping[replaceDirection].source.replaceAll("\\/", "/");
+          for (var i=1; i<match.length; i++) {
+            path = path.replace("(.*)", match[i]);
           }
-        } else {
-          if (dest.url.indexOf("/channels/channellog/") == 0) {
-            var match = dest.url.match(/\/channels\/channellog\/(.*)\//);
-            if (match.length > 1) {
-              dest.path = "/settings/channels/" + match[1] + "/log";
-            }
-          } else {
-            if (dest.url.indexOf("/channels/") == 0) {
-              dest.path = dest.url.replace("/channels/", "/settings/channels/");
-            }
-          }
+          path = path.replaceAll("(.*)", "");
+          console.log("=>", path);
+          return path;
         }
       }
+      return path;
+    }
 
-      if (dest.url.indexOf("/contacts/groups/") == 0) {
-        dest.path = dest.url;
-      }
+    function handleNoPath(event) {
+      var details = event.detail;
+      var menu = document.querySelector("temba-menu");
 
-      if (dest.url.indexOf("/org/manage_accounts/") == 0) {
-        dest.path = dest.url.replace("/org/manage_accounts/", "logins")
+      var path = details.selection + "/" + details.path;
+      var mapped = replaceMapping(path, true);
+
+      if (path != mapped){
+        gotoURL(mapped, path);
       } else {
-
-        if (dest.url.indexOf("/org/manage_accounts_sub_org") == 0) {
-          var match = dest.url.match(/\/org\/manage_accounts_sub_org\/\?org=(.*)/);
-          if (match.length > 1) {
-            dest.path = "/settings/workspace/" + match[1] + "/";
-          }
-        } else {
-          if (dest.url.indexOf("/org/") == 0) {
-            dest.path = dest.url.replace("/org/", "/settings/org/")
-          }
-        }
+        // set our menu to the proper focus, pruning the extras
+        menu.setFocusedItem(details.selection + "/" + details.path);
       }
     }
 
@@ -692,7 +679,9 @@
       }
 
       // migrate our old urls
-      convertLegacyURL(dest);
+      if (dest.path.match(toMap)) {
+        dest.path = replaceMapping(dest.path);
+      }
       gotoURL(dest.url, dest.path, !triggerEvents);
       menu.setFocusedItem(dest.path);
     }
@@ -718,33 +707,6 @@
       }
     }
 
-    function handleNoPath(event) {
-      var details = event.detail;
-      var menu = document.querySelector("temba-menu");
-
-      if (details.selection.indexOf("/settings/channels/") == 0) {
-        gotoURL("/channels/channellog/" + details.item, "/settings/channels/" + details.item + "/log");
-      }
-
-      if (details.item == "contacts") {
-        gotoURL("/contact/" + details.path, "/" + details.item + "/" + details.path);
-      } 
-      
-      if (details.item == "flows") {
-        gotoURL("/flow/" + details.path, "/" + details.item + "/" + details.path);        
-      }
-
-      if (details.item == "settings") {
-        gotoURL("/" + details.path, "/settings/" + details.path);
-      }
-
-      if (details.item == "workspace") {
-        // gotoURL("/settings/workspace/" + details.path, "/" + details.item + "/" + details.path);
-      }
-
-
-      menu.setFocusedItem(details.selection + "/" + details.path);
-    }
 
 -block refresh-fn
   :javascript
