--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -264,6 +264,17 @@
     }
 
     {% if org_perms.msgs.msg_update %}
+    let doNotContactDialog = document.createElement("temba-dialog");
+    let dialogBody = document.createElement("div");
+    doNotContactDialog.id = "do-not-contact-dialog";
+    doNotContactDialog.header = gettext("Out of Business Hours Warning");
+    doNotContactDialog.primaryButtonName = "Confirm";
+    doNotContactDialog.destructive = true;
+    dialogBody.className = "body";
+    dialogBody.innerHTML = `<p style="margin: 20px;">${gettext("You are trying to send a message out of compliance hours (8AM - 9PM). Are you sure you want to continue?")}</p>`;
+    doNotContactDialog.body = dialogBody;
+    document.body.append(doNotContactDialog);
+
 
     function handleCreateLabelModalLoaded(event) {
       lastChecked = getCheckedIds();
@@ -283,6 +294,20 @@
         sendModal.setAttribute("endpoint", sendEndpoint + '?m=' + msgIds);
       } else {
         sendModal.setAttribute("endpoint", sendEndpoint);
+      }
+      // todo: actual do not contact
+      let doNotContact = true;
+      if (doNotContact) {
+        let sendModalSubmit = sendModal.submit.bind(sendModal);
+        sendModal.submit = () => {
+          doNotContactDialog.open = true;
+          doNotContactDialog.addEventListener("temba-button-clicked", function(event) {
+            if (!event.detail.button.secondary) {
+              doNotContactDialog.open = false;
+              sendModalSubmit();
+            }
+          });
+        }
       }
     }
     {% endif %}
