--- a/templates/orgs/org_account.haml
+++ b/templates/orgs/org_account.haml
@@ -11,6 +11,14 @@
       -blocktrans with brand=brand.name
         {{brand}} recommends that you enable <temba-anchor href="{{otp_url}}">two factor</temba-anchor> authentication.
 
-
   -include "formax.haml"
 
+  .eject.mt-3.ml-3
+    .text-xl
+      Not ready for the new interface?
+    .mt-1
+      -trans "Go back to the "
+      %span.linked(onclick="leaveNewInterface()")<
+        -trans "old one"
+      for now.
+    
