--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -5,6 +5,16 @@
 -block header
 -block footer
 
+-block auto-route
+  :javascript
+    function leaveNewInterface() {
+      document.cookie = "nav=1; expires=Fri, 31 Dec 9999 23:59:59 GMT; path=/;";
+      document.location = "/msg/inbox";
+    }
+
+-block interface-option
+  
+
 -block extra-style
   {{block.super}}
 
@@ -249,6 +259,7 @@
      
 -block full-page-script
   %script{src:"{{ STATIC_URL }}js/labels.js?4"}
+  %script{src:"{{ STATIC_URL }}js/urls.js"}
 
   :javascript
 
@@ -614,50 +625,14 @@
       });
     }
 
-    var legacyURLs = [
-      { old: /\/msg\/filter\/(.*)/,                        new: /\/messages\/labels\/(.*)\// },
-      { old: /\/contact\/read\/(.*)/,                      new: /\/contacts\/read\/(.*)/ },
-      { old: /\/contact\/filter\/(.*)/,                    new: /\/contacts\/groups\/(.*)\// },
-      { old: /\/flow\/editor\/(.*)\//,                     new: /\/flows\/editor\/(.*)/ },
-      { old: /\/flow\/filter\/(.*)\//,                     new: /\/flows\/(.*)\// },
-      { old: /\/ticket\/(.*)/,                             new: /\/tickets\/(.*)\// },
-      { old: /\/channels\/channellog\/read\/(.*)\/(.*)\//, new: /\/settings\/ch-(.*)\/log\/(.*)/ },
-      { old: /\/channels\/channellog\/(.*)\//,             new: /\/settings\/ch-(.*)\/log/ },
-      { old: /\/channels\/channel\/configuration\/(.*)\//, new: /\/settings\/ch-(.*)\/config/ },
-      { old: /\/channels\/channel\/read\/(.*)/,            new: /\/settings\/ch-(.*)\// },
-      { old: /\/channels\/types\/(.*)\/claim/,             new: /\/settings\/channel\/(.*)\// },
-      { old: /\/org\/manage_accounts\/(.*)/,               new: /\/settings\/logins/ },
-      { old: /\/user\/two_factor_disable\//,               new: /\/settings\/authentication\/2fa-disable\// }
-    ]
-
     var toMap = /(msg|contact|flow|ticket|channels|org|user).*/;
-
-    function replaceMapping(path, reverse) {
-      var findDirection = reverse ? "new" : "old";
-      var replaceDirection = reverse ? "old" : "new";
-      for (var mapping of legacyURLs) {
-        var match = path.match(mapping[findDirection]);
-        console.log(path, mapping[findDirection], !!match);
-        if (match) {
-          
-          path = mapping[replaceDirection].source.replaceAll("\\/", "/");
-          for (var i=1; i<match.length; i++) {
-            path = path.replace("(.*)", match[i]);
-          }
-          path = path.replaceAll("(.*)", "");
-          console.log("=>", path);
-          return path;
-        }
-      }
-      return path;
-    }
 
     function handleNoPath(event) {
       var details = event.detail;
       var menu = document.querySelector("temba-menu");
 
       var path = details.selection + "/" + details.path;
-      var mapped = replaceMapping(path, true);
+      var mapped = mapUrl(path, true);
 
       if (path != mapped){
         gotoURL(mapped, path);
@@ -680,7 +655,7 @@
 
       // migrate our old urls
       if (dest.path.match(toMap)) {
-        dest.path = replaceMapping(dest.path);
+        dest.path = mapUrl(dest.path);
       }
       gotoURL(dest.url, dest.path, !triggerEvents);
       menu.setFocusedItem(dest.path);
