--- a/templates/triggers/trigger_schedule_in_batch.haml
+++ b/templates/triggers/trigger_schedule_in_batch.haml
@@ -51,6 +51,15 @@
         flowById[node.getAttribute('value').toString()] = node.getAttribute('name');
       });
 
+      let doNotContactDialog = document.querySelector("#do-not-contact-dialog");
+      doNotContactDialog.addEventListener("temba-button-clicked", function(event) {
+        if (!event.detail.button.secondary) {
+          doNotContactDialog.open = false;
+          inBatchConfirmation.classList.remove("hide");
+          inBatchConfirmation.open = true;
+        }
+      });
+
       form.off("submit").on("submit", function(e) {
         e.preventDefault();
         const formDataByName = buildFormData(form)
@@ -64,6 +73,13 @@
           .replace('{batchInterval}', formDataByName.batch_interval)
 
         modalMessage.text(message);
+        if ("{{ user_org.do_not_contact_property }}" === "True" && formDataByName.start_datetime && formDataByName.start_datetime.length) {
+          let time = parseInt(formDataByName.start_datetime.split(" ")[1].split(":")[0]);
+          if (time < 8 || time > 21) {
+            doNotContactDialog.open = true;
+            return;
+          }
+        }
         inBatchConfirmation.classList.remove("hide");
         inBatchConfirmation.open = true;
       });
@@ -104,6 +120,10 @@
 
   %temba-dialog#bulk-schedule-confirmation.hide(header='{{ _("Bulk Schedule Confirmation")|escapejs }}' primaryButtonName='{{ _("Confirm")|escapejs }}' destructive='true')
     .p-6
+
+  %temba-dialog#do-not-contact-dialog(header='{{ _("Out of Business Hours Warning")|escapejs }}' primaryButtonName='{{ _("Confirm")|escapejs }}' destructive='true')
+    .p-6
+      {{ _("You are trying to send a message out of compliance hours (8AM - 9PM). Are you sure you want to continue?") }}
 
 
 -block summary
