Fix welcome page widths.  * Allow .card to shrink as needed  * Add explicit flex-shrink-0 on channel cart card

--- a/static/scss/tailwind.scss
+++ b/static/scss/tailwind.scss
@@ -624,7 +624,7 @@ code {
 }
 
 .card {
-  @apply rounded-lg py-6 px-6 shadow my-4 bg-white overflow-hidden transition duration-200 flex-shrink-0;
+  @apply rounded-lg py-6 px-6 shadow my-4 bg-white overflow-hidden transition duration-200;
 
   .bleed-t {
     @apply -mt-6 mb-6;
