--- a/templates/channels/channel_read.haml
+++ b/templates/channels/channel_read.haml
@@ -223,7 +223,7 @@
                 %td
                   {{ channel.get_error_log_count|intcomma }}
 
-      .card.pt-8
+      .card.pt-8.flex-shrink-0
         %div#channel-chart
 
       -if ivr_count
