--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -275,6 +275,20 @@
     doNotContactDialog.body = dialogBody;
     document.body.append(doNotContactDialog);
 
+    let doNotContact = "{{ user_org.do_not_contact }}" === "True";
+    if (doNotContact) {
+      let sendModal = document.querySelector("#send-message-modal");
+      let sendModalSubmit = sendModal.submit.bind(sendModal);
+      doNotContactDialog.addEventListener("temba-button-clicked", function(event) {
+        if (!event.detail.button.secondary) {
+          doNotContactDialog.open = false;
+          sendModalSubmit();
+        }
+      });
+      sendModal.submit = () => {
+        doNotContactDialog.open = true;
+      }
+    }
 
     function handleCreateLabelModalLoaded(event) {
       lastChecked = getCheckedIds();
@@ -294,19 +308,6 @@
         sendModal.setAttribute("endpoint", sendEndpoint + '?m=' + msgIds);
       } else {
         sendModal.setAttribute("endpoint", sendEndpoint);
-      }
-      let doNotContact = "{{ user_org.do_not_contact }}" === "True";
-      if (doNotContact) {
-        let sendModalSubmit = sendModal.submit.bind(sendModal);
-        sendModal.submit = () => {
-          doNotContactDialog.open = true;
-          doNotContactDialog.addEventListener("temba-button-clicked", function(event) {
-            if (!event.detail.button.secondary) {
-              doNotContactDialog.open = false;
-              sendModalSubmit();
-            }
-          });
-        }
       }
     }
     {% endif %}
