--- a/templates/flows/flow_export_results.haml
+++ b/templates/flows/flow_export_results.haml
@@ -1,12 +1,15 @@
 -extends 'includes/modax.html'
 -load i18n
--load smartmin
--load temba
 
 -block pre-form
   .mb-4
-    Flow exports will include the results for each contact that has passed through the flow. You may optionally
-    include up to 10 contact fields whose values will also be exported with each run.
+    -blocktrans trimmed
+      Will contain results for all contacts that responded to this flow. You may optionally
+      include up to 10 contact fields and URN types whose values will also be included with each run.
 
-
-
+-block modal-extra-style
+  {{ block.super }}
+  :css
+    .field_responded_only, .field_include_msgs {
+      display: none;
+    }
